# system_integration_repo

./: README.md
HTML/: index.html
HTML/node/: app.js
data_format_translation_servers [INDIVIDUAL]/node/: app.js  package-lock.json  server_file_reader.js  yaml_file.yaml
data_format_translation_servers [INDIVIDUAL]/node/routers/: routerA.js  routerB.js
data_format_translation_servers [INDIVIDUAL]/python/: pyproject.toml  xml_file.xml
data_format_translation_servers/node/: csv_file.csv  package.json  text_file.txt
data_format_translation_servers/python/: json_file.json  main.py
date_servers [INDIVIDUAL]/python/: main.py
date_servers/node/: app.js  package-lock.json  package.json
fast_api_swagger/: main.py  webhook.py
file_formats/: text_file.txt
file_formats/node/: file_reader.js  package-lock.json
file_formats/python/: file_reader.py
file_formats_bonanza [INDIVIDUAL]/node/: package.json
rest_api_docs/: app.js  package-lock.json  package.json
rest_api_docs/routers/: users.js
rest_api_documentation [INDIVIDUAL]/: app.js  package-lock.json  package.json
rest_api_documentation [INDIVIDUAL]/routers/: plants.js
server-sent_events/: app.js  package-lock.json  package.json
server-sent_events/public/: index.html
socket_io/node/: app.js  package.json
socket_io/node/public/: index.html
socket_io/python/: main.py  pyproject.toml
web_sockets/: package-lock.json  package.json  server.js
web_sockets/public/: index.html
